# nolog

./: .gitignore  COPYRIGHT  Cargo.toml  README.md
assets/: location.xcf  style.xcf  term-optimize.xcf  term.xcf
examples/: base.rs  to-file-debug-plus-release.rs  to-file.rs  to-stderr.rs
examples/custom_color_scheme/: Cargo.toml  main.rs
examples/custom_output_redirection/: Cargo.toml  main.rs
examples/min_example/: Cargo.toml  main.rs
examples/nolog-as-dep-to-stdout/: Cargo.toml
examples/nolog-as-dep-to-stdout/src/: main.rs  other.rs
examples/nolog-no-dep-to-stdout/: Cargo.toml  LICENSE
examples/nolog-no-dep-to-stdout/src/: logger.rs  main.rs  other.rs
examples/nolog-plain-as-dep-to-file/: Cargo.toml
examples/nolog-plain-as-dep-to-file-timestamp-chrono/: Cargo.toml
examples/nolog-plain-as-dep-to-file-timestamp-chrono/src/: logger.rs  main.rs
examples/nolog-plain-as-dep-to-file/src/: logger.rs  main.rs
examples/novus/: Cargo.toml  main.rs
examples/timestamp/: Cargo.toml  main.rs
examples/tofile/: Cargo.toml  main.rs
src/: disabled.rs  glob.rs  level_logmod.rs  level_logonly.rs  level_logonly_and_logmod.rs  lib.rs  log_enabled.rs  logcatch.rs  logmod.rs  logonly.rs  tofile.rs
src/core/: color.rs  customization.rs  format.rs  indent.rs  indent_base.rs  level.rs  level_inner.rs  lvl_header.rs  mod.rs  msg_render.rs  newline.rs  separator.rs  writelog.rs
