[package]
name = "timestamp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "timestamp"
path = "./main.rs"

[dependencies]
nolog = { version = "*", path = "../../", features = [] }
chrono = "0.4"

[features]
nolog_setup = [
    "custom_leading",
    "nolog/show_lvl_header_kv",
    "nolog/indent_ignore_all",
    "nolog/newline_ignore",
    "nolog/location_style_classic",
    "nolog/sep_colon"
]

# example `classic`
#nolog_setup = ["nolog/show_lvl_header_kv", "nolog/indent_ignore_all", "nolog/newline_ignore", "nolog/location_style_classic", "nolog/sep_colon"]

# example `classic_plain`
#nolog_setup = ["nolog/plain", "nolog/show_lvl_header_kv", "nolog/indent_ignore_all", "nolog/newline_ignore", "nolog/location_style_classic", "nolog/sep_colon"]

custom_leading    = ["nolog/custom_leading"]
custom_trailing   = ["nolog/custom_trailing"]
custom_before_msg = ["nolog/custom_before_msg"]
custom_after_msg  = ["nolog/custom_after_msg"]

trace = ["nolog/trace", "nolog_setup"]
debug = ["nolog/debug", "nolog_setup"]
info  = ["nolog/info",  "nolog_setup"]
warn  = ["nolog/warn",  "nolog_setup"]
error = ["nolog/error", "nolog_setup"]
crit  = ["nolog/crit",  "nolog_setup"]

logonly  = ["nolog/logonly"]
logcatch = ["nolog/logcatch"]
logmod   = ["nolog/logmod"]













